# geoverdict

./: .gitignore  EXPLAINER.md  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_geometry_gauntlet.ipynb  02_forest_baseline.ipynb  03_timeseries_screening.ipynb  04_learned_detector.ipynb  05_verdicts_evidence.ipynb  06_verification.ipynb
scripts/: nb01_geometry.py  nb02_baseline.py  nb03_timeseries.py  nb04_learned.py  nb05_verdicts.py  nb06_verification.py  nbbuild.py
src/geoverdict/: __init__.py  config.py  corrupt.py  evidence.py  gee.py  geometry.py  metrics.py  models.py  risk.py  s2.py  timeseries.py  viz.py
tests/: conftest.py  test_evidence.py  test_geometry.py  test_metrics.py  test_models.py  test_risk.py  test_timeseries.py
