[project]
name = "geoverdict"
version = "0.1.0"
description = "From messy plot geometries to audit-ready EUDR verdicts - a geospatial ML pipeline prototype"
authors = [{ name = "Saad Haroon" }]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
